package com.atguigu.template;

public class RedBeanSoyaMilk extends SoyaMilk {

    @Override
    void addCondiments() {
        System.out.println("加上上好的红豆");
    }
}
