@startuml

title __TEMPLATE's Class Diagram__\n

  namespace com.atguigu.template {
    class com.atguigu.template.Client {
        {static} + main()
    }
  }
  

  namespace com.atguigu.template {
    class com.atguigu.template.PeanutSoyaMilk {
        ~ addCondiments()
    }
  }
  

  namespace com.atguigu.template {
    class com.atguigu.template.RedBeanSoyaMilk {
        ~ addCondiments()
    }
  }
  

  namespace com.atguigu.template {
    abstract class com.atguigu.template.SoyaMilk {
        {abstract} ~ addCondiments()
        ~ beat()
        ~ make()
        ~ select()
        ~ soak()
    }
  }
  

  com.atguigu.template.PeanutSoyaMilk -up-|> com.atguigu.template.SoyaMilk
  com.atguigu.template.RedBeanSoyaMilk -up-|> com.atguigu.template.SoyaMilk


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
